--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "lodash.debounce": "^4.0.8",
         "next": "12.2.5",
         "next-images": "^1.8.4",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-icons": "5.4.0",
         "styled-components": "^5.3.5"
     },
     "devDependencies": {
+        "@types/lodash.debounce": "4.0.9",
         "@types/node": "^18.7.13",
         "@types/react": "^18.0.17",
+        "@types/react-icons": "^3.0.0",
         "@types/styled-components": "^5.1.26",
         "@typescript-eslint/eslint-plugin": "5.0.0",
         "babel-plugin-inline-react-svg": "^2.0.1",
