--- a/package.json
+++ b/package.json
@@ -9,14 +9,23 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "axios": "0.21.1",
+        "immer": "8.0.1",
+        "js-cookie": "2.2.1",
         "lodash.debounce": "^4.0.8",
         "next": "12.2.5",
         "next-images": "^1.8.4",
+        "next-redux-wrapper": "6.0.2",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-icons": "5.4.0",
+        "react-redux": "7.2.2",
+        "redux": "^5.0.1",
+        "redux-devtools-extension": "2.13.8",
+        "redux-saga": "1.1.3",
         "styled-components": "^5.3.5",
-        "swiper": "^11.2.5"
+        "swiper": "^11.2.5",
+        "uuid": "8.3.2"
     },
     "devDependencies": {
         "@types/lodash.debounce": "4.0.9",
